# oboe-rust

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  build.gradle  gradle.properties  jitpack.yml  settings.gradle
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-ci.yml  publish-github-packages.yml
android/oboe-wrapper/: build.gradle  gradle.properties  settings.gradle
android/oboe-wrapper/gradle/wrapper/: gradle-wrapper.properties
android/oboe-wrapper/minimaloboe-rust-app/: build.gradle
android/oboe-wrapper/minimaloboe-rust-app/src/main/: AndroidManifest.xml
android/oboe-wrapper/minimaloboe-rust-app/src/main/java/com/example/minimaloboe/: AudioPlayer.java  MainActivity.java
android/oboe-wrapper/minimaloboe-rust-app/src/main/jniLibs/: .gitignore
android/oboe-wrapper/oboe-remote-aar-demo/: README.md  build.gradle  settings.gradle
android/oboe-wrapper/oboe-remote-aar-demo/src/main/: AndroidManifest.xml
android/oboe-wrapper/oboe-remote-aar-demo/src/main/java/com/google/oboe/remoteaar/: MainActivity.java
android/oboe-wrapper/oboe-samples-app/: build.gradle
android/oboe-wrapper/oboe-samples-app/src/main/: AndroidManifest.xml
android/oboe-wrapper/oboe-samples-app/src/main/java/com/google/oboe/samples/: MainActivity.java  RustSampleRunner.java
android/oboe-wrapper/oboe-samples-app/src/main/jniLibs/: .gitignore
android/oboe-wrapper/oboe-smoke-app/: build.gradle
android/oboe-wrapper/oboe-smoke-app/src/main/: AndroidManifest.xml
android/oboe-wrapper/oboe-smoke-app/src/main/java/com/google/oboe/smoke/: MainActivity.java
android/oboe-wrapper/oboe-wrapper/: build.gradle
android/oboe-wrapper/oboe-wrapper/src/androidTest/java/com/google/oboe/: AudioStreamSmokeTest.java
android/oboe-wrapper/oboe-wrapper/src/main/java/com/google/oboe/: AudioApi.java  AudioCallback.java  AudioDirection.java  AudioFormat.java  AudioPartialDataCallback.java  AudioPresentationCallback.java  AudioRoutingCallback.java  AudioStream.java  AudioStreamBuilder.java  AudioTimestamp.java  ContentType.java  InputPreset.java  PerformanceMode.java  PlaybackParameters.java  SharingMode.java  Usage.java
android/oboe-wrapper/oboe-wrapper/src/main/jniLibs/: .gitignore
android/oboe-wrapper/openai-realtime-app/: README.md  build.gradle  multidex-keep.pro  multidex-keep.txt
android/oboe-wrapper/openai-realtime-app/src/main/: AndroidManifest.xml
android/oboe-wrapper/openai-realtime-app/src/main/jniLibs/: .gitignore
android/oboe-wrapper/openai-realtime-app/src/main/kotlin/com/example/openairustrealtime/: MainActivity.kt  RealtimeNative.kt  RealtimeSignalView.kt
android/oboe-wrapper/openai-realtime-app/src/main/kotlin/com/example/openairustrealtime/core/audio/: OboePcmPlayer.kt  (+9 more)
docs/: README.md  index.md  openai-realtime-app.md  rust-alpha-release-checklist.md  rust-android-device-smoke.md  rust-oboe-release-scope.md  rust-samples.md
docs/plans/: 2026-05-02-route-c-cpp-prefab-callback-plan.md
docs/superpowers/migration/: 2026-05-02-src-retirement-status.md
docs/superpowers/plans/: 2026-05-01-full-rust-oboe-rewrite.md  2026-05-02-aaudio-output-rust-vertical-slice.md  2026-05-02-rust-native-oboe-android-replacement.md  2026-05-02-rust-oboe-alpha-release-readiness.md
docs/superpowers/specs/: 2026-05-02-rust-native-oboe-android-design.md
examples/rust/: Cargo.toml
examples/rust/oboe-samples-jni/: Cargo.toml
examples/rust/oboe-samples-jni/src/: lib.rs
rust/: Cargo.toml
rust/minimaloboe-rust-jni/: Cargo.toml
rust/minimaloboe-rust-jni/src/: lib.rs
rust/oboe-android/: Cargo.toml  README.md
rust/oboe-android/src/: aaudio.rs  backend.rs  fake.rs  lib.rs  opensles.rs
rust/oboe-android/tests/: low_latency_backend_contract.rs
rust/oboe-core/: Cargo.toml  README.md
rust/oboe-core/src/: builder.rs  callback.rs  capabilities.rs  error.rs  extensions.rs  fifo.rs  format.rs  lib.rs  resampler.rs  stream.rs  types.rs
rust/oboe-core/tests/: callback_contract.rs
rust/oboe-jni/: Cargo.toml
rust/oboe-jni/src/: lib.rs
rust/oboe-samples/: Cargo.toml  README.md
rust/oboe-samples-jni/: Cargo.toml
rust/oboe-samples/examples/: audio_device.rs  debug_utils.rs  drumthumper.rs  hello_oboe.rs  iolib.rs  live_effect.rs  mega_drone.rs  minimal_oboe.rs  parselib.rs  powerplay.rs  rhythm_game.rs  shared.rs  sound_board.rs
rust/oboe-samples/src/: audio_device.rs  debug_utils.rs  drumthumper.rs  hello_oboe.rs  iolib.rs  lib.rs  live_effect.rs  mega_drone.rs  minimal_oboe.rs  parselib.rs  powerplay.rs  rhythm_game.rs  shared.rs  sound_board.rs
rust/oboe-samples/tests/: sample_contracts.rs
rust/oboe_rust_core/: Cargo.toml
rust/oboe_rust_core/src/: aaudio.rs  extensions.rs  fifo.rs  lib.rs  opensles.rs  resampler.rs  stream.rs
rust/openai-realtime-jni/: Cargo.toml
rust/openai-realtime-jni/src/: lib.rs
src/aaudio/: AAudioExtensions.h  AudioStreamAAudio.cpp  AudioStreamAAudio.h
src/common/: AudioStream.cpp  AudioStreamBuilder.cpp  Utilities.cpp
src/fifo/: FifoBuffer.cpp  FifoControllerBase.cpp
src/flowgraph/: ClipToRange.cpp  Limiter.cpp  ManyToMultiConverter.cpp  MonoBlend.cpp  MonoToMultiConverter.cpp  MultiToManyConverter.cpp  MultiToMonoConverter.cpp  RampLinear.cpp  SinkFloat.cpp  SinkI16.cpp  SinkI24.cpp  SinkI32.cpp  SourceFloat.cpp  SourceI16.cpp  SourceI24.cpp
src/flowgraph/resampler/: IntegerRatio.cpp  LinearResampler.cpp  MultiChannelResampler.cpp  PolyphaseResampler.cpp  PolyphaseResamplerMono.cpp  PolyphaseResamplerStereo.cpp  SincResampler.cpp  SincResamplerStereo.cpp
src/opensles/: AudioInputStreamOpenSLES.cpp  AudioOutputStreamOpenSLES.cpp  AudioStreamOpenSLES.cpp  AudioStreamOpenSLES.h
src/rust/: oboe_rust_core.h
tools/: build-minimaloboe-rust-apk.ps1  build-openai-realtime-apk.ps1  build-rust-android.ps1  build-rust-android.sh  build-samples-apk.ps1  build-smoke-apk.ps1  check-public-surface.sh  check-route-c-foundation.sh  check-route-c-live-build-surface.sh  check-route-c-realtime-capabilities.sh  check-rust-release.sh  publish-jitpack-android.sh  use-android-toolchain.sh
(+42 files in other folders)
