[package]
name = "minimaloboe-rust-jni"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[dependencies]
oboe-android = { path = "../oboe-android" }
oboe-core = { path = "../oboe-core" }
oboe-samples = { path = "../oboe-samples" }

[lib]
name = "minimaloboe_rust"
crate-type = ["cdylib", "rlib"]
