[package]
name = "openai-realtime-jni"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
name = "openai_realtime_jni"

[dependencies]
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
jni = "0.21"
oboe-android = { path = "../oboe-android" }
oboe-core = { path = "../oboe-core" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
